First whack at supporting domain mode (cluster tests)