@@ -21,8 +21,9 @@
             [clojure.string      :as str]
             [jboss-as.management :as api]))
 
-(def ^:dynamic *home* (or (System/getenv "JBOSS_HOME")
-                          (io/file (System/getProperty "user.home") ".immutant/current/jboss")))
+(def ^:dynamic *home*
+  (or (System/getenv "JBOSS_HOME")
+      (io/file (System/getProperty "user.home") ".immutant/current/jboss")))
 (def ^:dynamic *descriptor-root* ".descriptors")
 (def ^:dynamic *isolation-dir* "target/isolated-immutant")
 (def ^:dynamic *port-offset* 67)
@@ -34,116 +35,52 @@
 
 (def isolated? (partial check-mode :isolated))
 
-(def lazy? (partial check-mode :lazy))
-
 (def offset? (partial check-mode :offset))
 
-(defn sysprop [name default]
-  (format "-D%s=%s"
-          name
-          (if-let [val (System/getProperty name)]
-            val
-            default)))
+(def domain? (partial check-mode :domain))
 
-(defn default-endpoint [modes]
-  (if (offset? modes)
-    (let [offset (Integer. (or (System/getProperty "jboss.socket.binding.port-offset") *port-offset*))
-          port (nth (str/split api/*api-endpoint* #"[:/]") 4)]
-      (str/replace api/*api-endpoint* port (str (+ offset (Integer. port)))))
-    api/*api-endpoint*))
+(defn isolated-base-dir [modes jboss-home]
+  (let [base (if (domain? modes) "domain" "standalone")]
+    (if (isolated? modes)
+      (let [base-dir (io/file *isolation-dir* base)
+            config-dir (io/file jboss-home base "configuration") ]
+        (mapv (fn [f] (.mkdirs (io/file base-dir f)))
+              ["deployments" "configuration"])
+        (mapv (fn [f] (io/copy (io/file config-dir f)
+                              (io/file base-dir "configuration" f)))
+              (.list config-dir
+                     (reify java.io.FilenameFilter
+                       (accept [_ dir name]
+                         (boolean (or (re-find #"\.properties$" name)
+                                      (re-find #"\.xml$" name)))))))
+        (.getCanonicalPath base-dir))
+      (.getCanonicalPath (io/file jboss-home base)))))
 
-(defn debug-options []
-  (if (= "true" (System/getProperty "fntest.debug"))
-    "-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y"))
-
-(defn isolated-options []
-  (let [base-dir (.getCanonicalPath (io/file *isolation-dir*))]
-    (mapv (fn [f] (.mkdirs (io/file base-dir f)))
-          ["deployments" "configuration"])
-    (mapv (fn [f] (io/copy (io/file *home* "standalone/configuration" f)
-                          (io/file base-dir "configuration" f)))
-          ["application-roles.properties" "application-users.properties"
-           "mgmt-users.properties" "standalone.xml"])
-    [(sysprop "org.jboss.boot.log.file"
-              (format "%s/log/boot.log" base-dir))
-     (sysprop "jboss.server.base.dir" base-dir)]))
-
-(defn offset-options []
-  [(sysprop "jboss.socket.binding.port-offset" (str *port-offset*))])
-
-(defn start-command [modes]
-  (let [java-home (System/getProperty "java.home")
-        jboss-home (.getCanonicalFile (io/file *home*))]
-    (-> [(str java-home "/bin/java")
-         "-Xms64m"
-         "-Xmx1024m"
-         "-XX:MaxPermSize=1024m"
-         "-XX:+UseConcMarkSweepGC"
-         "-XX:+UseParNewGC"
-         "-XX:+CMSClassUnloadingEnabled"
-         (debug-options)
-         (sysprop "org.jboss.resolver.warning" "true")
-         (sysprop "sun.rmi.dgc.client.gcInterval" "3600000")
-         (sysprop "jboss.home.dir" jboss-home)
-         (format "-jar %s/jboss-modules.jar" jboss-home)
-         (format "-mp %s/modules" jboss-home)
-         "-jaxpmodule javax.xml.jaxp-provider"
-         "org.jboss.as.standalone"
-         "--server-config=standalone.xml"
-         (format "-Dlogging.configuration=file:%s/standalone/configuration/logging.properties"
-                 jboss-home)]
-        (concat
-         (if (isolated? modes)
-           (isolated-options)
-           [(sysprop "org.jboss.boot.log.file"
-                     (format "%s/standalone/log/boot.log"
-                             jboss-home))])
-         (if (offset? modes)
-           (offset-options)))
-        (as-> x
-              (remove nil? x)
-              (str/join " " x)))))
-
-(defmacro with-api-endpoint [endpoint & body]
-  `(binding [api/*api-endpoint* ~endpoint]
-     ~@body))
-
-(defn ready? [endpoint]
-  (with-api-endpoint endpoint
-    (api/ready?)))
+(defn create-server [modes]
+  (api/create-server :domain (domain? modes)
+                     :offset (if (offset? modes) *port-offset* 0)
+                     :jboss-home *home*
+                     :base-dir (isolated-base-dir modes *home*)
+                     :debug (= "true" (System/getProperty "fntest.debug"))))
 
 (defn wait-for-ready?
-  "Returns true if JBoss is up. Otherwise, sleeps for one second and
-   then retries, effectively blocking the current thread until JBoss
-   becomes ready or 'attempts' number of seconds has elapsed"
-  [endpoint attempts]
-  (or (ready? endpoint)
-      (when (> attempts 0)
-        (Thread/sleep 1000)
-        (recur endpoint (dec attempts)))))
+  [server attempts]
+  (api/wait-for-ready? server attempts))
+
+(defn ready? [server]
+  (api/ready? server))
 
 (defn start
   "Start up a JBoss, returning a promise that gives you its management url"
-  [modes]
+  [server]
   (println "Starting JBoss")
-  (if (ready? (default-endpoint modes))
-    (throw (Exception. "JBoss is already running!"))
-    (let [cmd (start-command modes)
-          url (promise)]
-      (println cmd)
-      (sh/sh (str/split cmd #" ")
-             :line-fn (partial sh/find-management-endpoint
-                               #(deliver url %))
-             :pump-err? false
-             :pump-out? false)
-      url)))
+  (api/start server))
 
 (defn stop
   "Shut down whatever JBoss instance is responding to api-url"
-  [endpoint]
+  [server]
   (println "Stopping JBoss")
-  (with-api-endpoint endpoint
-    (api/shutdown)))
+  (api/stop server))
 
 (defn descriptor
   "Return a File object representing the deployment descriptor"
@@ -164,25 +101,23 @@
 
 (defn deploy
   "Create an app deployment descriptor from the content and deploy it"
-  ([endpoint content-map]
+  ([server content-map]
      (doseq [[name content] content-map]
-       (deploy endpoint name content)))
-  ([endpoint name content]
-     (with-api-endpoint endpoint
-       (let [file (if (instance? java.io.File content) content (descriptor name content))
-             fname (.getName file)
-             url (.toURL file)
-             add (api/add fname url)]
-         (println "Deploying" (.getCanonicalPath file))
-         (when-not (= "success" (:outcome add))
-           (api/remove fname)
-           (api/add fname url))
-         (api/deploy fname)))))
+       (deploy server name content)))
+  ([server name content]
+     (let [file (if (instance? java.io.File content) content (descriptor name content))
+           fname (.getName file)
+           url (.toURL file)
+           add (api/add server fname url)]
+       (println "Deploying" (.getCanonicalPath file))
+       (when-not (= "success" (:outcome add))
+         (api/undeploy server fname)
+         (api/add server fname url))
+       (api/deploy server fname))))
 
 (defn undeploy
   "Undeploy the apps deployed under the given names"
-  [endpoint & names]
+  [server & names]
   (doseq [name names]
     (println "Undeploying" name)
-    (with-api-endpoint endpoint
-      (api/remove (deployment-name name)))))
+    (api/undeploy server (deployment-name name))))
